FlowTeam/force-app/main/default/objects/VacationRequest__c/VacationRequest__c.object-meta.xml
<CustomObject>
    <label>Vacation Request</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>VacationRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VacationRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>