FlowTeam/force-app/main/default/objects/VacationRequest__c/fields/Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project/Resource</label>
    <referenceTo>Project_Resource__c</referenceTo>
    <relationshipName>VacationRequests</relationshipName>
    <type>Lookup</type>
</CustomField>