FlowTeam/force-app/main/default/objects/VacationRequest__c/fields/SafeIdVacation__c.field-meta.xml
<CustomField>
    <fullName>SafeIdVacation__c</fullName>
    <formula>LEFT( Owner:User.Id ,15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SafeIdVacation</label>
    <type>Text</type>
</CustomField>